--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,30 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: San Gemini Palace
-  id: san-gemini-palace
-  location: San Gemini, Umbria
-  description: Un antico casale a 5* nel cuore dell’Umbria, con ristorante gourmet
-  price: 300
-  price-description: per camera per notte
-  saved: 47
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90484/1ed97f1f_ed7b_4f29_aa12_ff6538b5ac46.jpg
-  link: https://it.secretescapes.com/san-gemini-palace-san-gemini-umbria/sale
-  domestic: true
-
-- title: Grand Hotel Palace
-  id: grand-hotel-palace
-  location: Roma, Lazio
-  description: Un 5* di charme nel cuore della Città Eterna
-  price: 181
-  price-description: per camera per notte
-  saved: 49
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/68210/e100ceda_acf8_4714_b3d7_21386766eb7c.jpg
-  link: https://it.secretescapes.com/grand-hotel-palace-roma-lazio/sale
-  domestic: true
-
 - title: Hotel Helvetia & Bristol
   id: hotel-helvetia-and-bristol
   location: Firenze, Toscana
@@ -33,7 +9,7 @@
   price: 315
   price-description: per camera per notte
   saved: 26
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92223/ad3860d2_2643_4f48_89f7_f757dd7a84d0.jpg
   link: https://it.secretescapes.com/hotel-helvetia-and-bristol-firenze-toscana/sale
   domestic: true
@@ -42,10 +18,10 @@
   id: seiser-alm-urthaler
   location: Alpe di Siusi, Trentino-Alto Adige
   description: Relax, ecosostenibilità e buona cucina in un 5* tra le Dolomiti
-  price: 249
+  price: 239
   price-description: per camera per notte
-  saved: 24
-  expires: 2019/04/24
+  saved: 34
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/48368/dca763de_8d5d_47a7_954c_fffac29b3881.jpg
   link: https://it.secretescapes.com/seiser-alm-urthaler-alpe-di-siusi-trentino-alto-adige/sale
   domestic: true
@@ -57,7 +33,7 @@
   price: 127
   price-description: per camera per notte
   saved: 53
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/61124/2ed7c6f0_a945_439f_9893_4a8b9e207dfb.jpg
   link: https://it.secretescapes.com/miramare-e-castello-ischia-campania-it123/sale
   domestic: true
@@ -74,81 +50,20 @@
   link: https://it.secretescapes.com/grand-hotel-principe-di-piemonte-viareggio-toscana12/sale
   domestic: true
 
+- title: Grand Hotel Palace
+  location: Roma, Lazio
+  description: Un 5* di charme nel cuore della Città Eterna
+  price: 90
+  price-description: a persona. Basato su 2 persone per camera
+  saved: 49
+  expires: 2019/04/29
+  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/68210/e100ceda_acf8_4714_b3d7_21386766eb7c.jpg
+  link: https://it.secretescapes.com/grand-hotel-palace-roma-lazio/sale
+  domestic: true
+
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
-
-- title: NH Collection Eurobuilding
-  id: nh-collection-eurobuilding
-  location: Madrid, Spagna
-  description: Alla scoperta di Madrid in un moderno 4* firmato NH Collection
-  price: 92
-  price-description: per camera per notte
-  saved: 63
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90979/84e481b0_2d88_45a3_9507_18b395178665.jpg
-  link: https://it.secretescapes.com/nh-collection-eurobuilding-madrid-spagna/sale
-  domestic: false
-
-- title: FERGUS Style Bahamas
-  id: fergus-style-bahamas
-  location: Ibiza
-  description: Soggiorno all inclusive a 4* a Ibiza in un hotel di classe a Platja d’en Bossa
-  price: 88
-  price-description: per camera per notte
-  saved: 63
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88312/3df765da_70b5_4101_bb17_42ac6d0b91b8.jpg
-  link: https://it.secretescapes.com/fergus-style-bahamas-ibiza-it/sale
-  domestic: false
-
-- title: DAS.Goldberg Bad Hofgastein
-  id: das.goldberg-bad-hofgastein
-  location: Bad Hofgastein, Austria
-  description: Soggiorno in un  moderno 4* affacciato sulle Alpi austriache, in mezza pensione
-  price: 298
-  price-description: per camera per notte
-  saved: 43
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9444/687def21_dc40_4ecd_922b_0e8e7daba936.jpg
-  link: https://it.secretescapes.com/dasgoldberg-bad-hofgastein-bad-hofgastein-austria-it/sale
-  domestic: false
-
-- title: Maritim proArte Hotel Berlin
-  id: maritim-proarte-hotel-berlin
-  location: Berlino
-  description: Moderno 4* superior per un city break a due passi dalla Porta di Brandeburgo
-  price: 109
-  price-description: per camera per notte
-  saved: 38
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/63439/1bc52496_43bd_4644_a933_deabf034170f.jpg
-  link: https://it.secretescapes.com/maritim-proarte-hotel-berlin-berlino1/sale
-  domestic: false
-
-- title: Hospes Maricel & Spa
-  id: hospes-maricel-and-spa
-  location: Palma di Maiorca
-  description: Relax e charme a 5* in un esclusivo boutique hotel sul mare di Maiorca
-  price: 177
-  price-description: per camera per notte
-  saved: 35
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/6917/78e43e85_87b7_41b9_a813_ae328cbeab0b.jpg
-  link: https://it.secretescapes.com/hospes-maricel-and-spa-palma-di-maiorca1/sale
-  domestic: false
-
-- title: Regency Country Club
-  id: regency-country-club
-  location: Tenerife
-  description: Fuga a 4* in un resort sull’isola di Tenerife, vicino alle spiagge di Las Americas
-  price: 183
-  price-description: per camera per notte
-  saved: 28
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/14358/6b826e14_d685_43c3_bf87_f81127f69131.jpg
-  link: https://it.secretescapes.com/regency-country-club-tenerife-italia/sale
-  domestic: false
 
 - title: Bohemia Suites & Spa
   id: bohemia-suites-and-spa
@@ -157,21 +72,9 @@
   price: 146
   price-description: per camera per notte
   saved: 38
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9362/d78fa349_24c1_4f72_addd_b401bc657013.jpg
   link: https://it.secretescapes.com/bohemia-suites-and-spa-maspalomas-gran-canaria13/sale
-  domestic: false
-
-- title: Hesperia Playa Dorada
-  id: hesperia-playa-dorada
-  location: Las Palmas, Lanzarote
-  description: Vacanza da sogno in hotel esclusivo a Lanzarote
-  price: 99
-  price-description: per camera per notte
-  saved: 34
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92097/7657686a_2d45_4778_bb09_cf13dfdd72c1.jpg
-  link: https://it.secretescapes.com/hesperia-playa-dorada-las-palmas-lanzarote/sale
   domestic: false
 
 - title: Hospes Palacio del Bailío
@@ -181,45 +84,9 @@
   price: 150
   price-description: per camera per notte
   saved: 35
-  expires: 2019/04/24
+  expires: 2019/04/27
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/26471/50df1177_3d2b_4905_bd07_b810b9dcf1f8.jpg
   link: https://it.secretescapes.com/hospes-palacio-del-bailio-cordoba-spagna-it2/sale
-  domestic: false
-
-- title: BURNS Fair & More
-  id: burns-fair-and-more
-  location: Colonia, Germania
-  description: Soggiorno dal design unico a pochi passi dal centro di Colonia
-  price: 88
-  price-description: per camera per notte
-  saved: 42
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/66477/2dcaf230_2684_4804_bc23_7ef4c279c577.jpg
-  link: https://it.secretescapes.com/burns-fair-and-more-colonia-germania-ita/sale
-  domestic: false
-
-- title: Park Hyatt Hamburg
-  id: park-hyatt-hamburg
-  location: Amburgo, Germania
-  description: Lusso a 5* e design d’avanguardia nel cuore dell’affascinante Amburgo
-  price: 169
-  price-description: per camera per notte
-  saved: 48
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/42673/8f084a44_fc4a_41bd_b0cb_db5494ff4bba.jpg
-  link: https://it.secretescapes.com/park-hyatt-hamburg-amburgo-germania3/sale
-  domestic: false
-
-- title: Myriad by SANA
-  id: myriad-by-sana
-  location: Lisbona, Portogallo
-  description: Design d’avanguardia per il tuo city break a 5*  a Lisbona
-  price: 210
-  price-description: per camera per notte
-  saved: 23
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91802/f94a7d0e_6c51_4121_b617_1c2089140f86.jpg
-  link: https://it.secretescapes.com/myriad-by-sana-lisbona-portogallo-ita/sale
   domestic: false
 
 - title: Vincci The Mint
@@ -229,7 +96,7 @@
   price: 150
   price-description: per camera per notte
   saved: 62
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92164/b3819d97_3214_4901_aa37_dc64d61060cc.jpg
   link: https://it.secretescapes.com/vincci-the-mint-madrid1/sale
   domestic: false
@@ -241,21 +108,9 @@
   price: 123
   price-description: per camera per notte
   saved: 33
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/50530/f3bc006c_1b9b_4cba_9b79_294ebb910ad1.jpg
   link: https://it.secretescapes.com/elba-premium-suites-lanzarote-isole-canarie-italia/sale
-  domestic: false
-
-- title: Risco del Gato Suites THe Senses Collection
-  id: risco-del-gato-suites-the-senses-collection
-  location: Fuerteventura
-  description: Estate a 4* in un raffinato hotel a Fuerteventura, in mezza pensione
-  price: 113
-  price-description: per camera per notte
-  saved: 48
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/60587/9e6122c3_6ad9_48b5_ae7e_3458c275a896.jpg
-  link: https://it.secretescapes.com/risco-del-gato-suites-the-senses-collection-fuerteventura/sale
   domestic: false
 
 - title: FERGUS Style Tobago
@@ -265,7 +120,7 @@
   price: 128
   price-description: per camera per notte
   saved: 60
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88670/4c46adf7_a562_4793_9ad4_dce72e9f340b.jpg
   link: https://it.secretescapes.com/fergus-style-tobago-maiorca-it/sale
   domestic: false
@@ -277,7 +132,7 @@
   price: 163
   price-description: per camera per notte
   saved: 42
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92612/82c0c341_c73c_4353_ba39_e1c417c3304c.jpg
   link: https://it.secretescapes.com/casa-cook-sa-torre-maiorca-spagna/sale
   domestic: false
@@ -286,10 +141,10 @@
   id: sir-victor-hotel
   location: Barcellona, Spagna
   description: Un hotel di design con piscina sul tetto nel cuore di Barcellona
-  price: 162
+  price: 170
   price-description: per camera per notte
   saved: 44
-  expires: 2019/04/23
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92339/828c60b9_056e_475f_b939_d2709920aedc.jpg
   link: https://it.secretescapes.com/sir-victor-hotel-barcellona-spagna/sale
   domestic: false
@@ -301,21 +156,9 @@
   price: 109
   price-description: per camera per notte
   saved: 32
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92425/97e0ad09_2290_442d_adf1_616478d0465b.jpg
   link: https://it.secretescapes.com/clarion-hotel-the-hub-oslo-it/sale
-  domestic: false
-
-- title: Löwen Hotel Montafon
-  id: löwen-hotel-montafon
-  location: Schruns, Austria
-  description: Alpi austriache a 4* per un soggiorno tra benessere e ottima cucina regionale
-  price: 246
-  price-description: per camera per notte
-  saved: 30
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/35490/6c790723_b2ff_48a3_bef4_157cffee81e8.jpg
-  link: https://it.secretescapes.com/lowen-hotel-montafon-schruns-austria-italia/sale
   domestic: false
 
 - title: Grand Ferdinand
@@ -325,7 +168,7 @@
   price: 169
   price-description: per camera per notte
   saved: 48
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/23938/49341686_96af_4928_abeb_d449eb2becbe.jpg
   link: https://it.secretescapes.com/grand-ferdinand-vienna-italia/sale
   domestic: false
@@ -337,7 +180,7 @@
   price: 170
   price-description: per camera per notte
   saved: 37
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/18957/30b31771_3ba7_476e_9dbc_578dd07d4993.jpg
   link: https://it.secretescapes.com/the-mandala-hotel-berlino-italia/sale
   domestic: false
@@ -349,21 +192,9 @@
   price: 99
   price-description: per camera per notte
   saved: 45
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/46766/836f4648_037a_4550_9ecf_a0d35b5bd906.jpg
   link: https://it.secretescapes.com/ruby-lilly-hotel-munich-monaco-di-baviera-italia/sale
-  domestic: false
-
-- title: STAGE 47 Design-Hotel
-  id: stage-47-design-hotel
-  location: Düsseldorf, Germania
-  description: City break glamour in un boutique hotel a 4* a Düsseldorf
-  price: 88
-  price-description: per camera per notte
-  saved: 49
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/66115/475365d4_6d69_4fcd_854c_d5d155c19a9b.jpg
-  link: https://it.secretescapes.com/stage-47-design-hotel-duesseldorf-germania-it2/sale
   domestic: false
 
 - title: Scandic Frankfurt Museumsufer
@@ -373,7 +204,7 @@
   price: 99
   price-description: per camera per notte
   saved: 47
-  expires: 2019/04/24
+  expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/66916/5b60ff85_9d9c_422a_88ac_b6c9ac711229.jpg
   link: https://it.secretescapes.com/scandic-frankfurt-museumsufer-francoforte-sul-meno-germania/sale
   domestic: false
@@ -382,7 +213,7 @@
   id: royal-garden-villas
   location: Tenerife
   description: Soggiorno benessere in un magnifico 5* in Costa Adeje a Tenerife
-  price: 581
+  price: 538
   price-description: per camera per notte
   saved: 41
   expires: 2019/04/30
@@ -412,4 +243,15 @@
   expires: 2019/04/30
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/42035/390a76ed_4e01_4211_83c7_2e1f7f886686.jpg
   link: https://it.secretescapes.com/casa-leon-gran-canaria-spagna1/sale
+  domestic: false
+
+- title: Risco del Gato Suites THe Senses Collection
+  location: Fuerteventura
+  description: Estate a 4* in un raffinato hotel a Fuerteventura, in mezza pensione
+  price: 56
+  price-description: a persona. Basato su 2 persone per suite
+  saved: 48
+  expires: 2019/04/29
+  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/60587/9e6122c3_6ad9_48b5_ae7e_3458c275a896.jpg
+  link: https://it.secretescapes.com/risco-del-gato-suites-the-senses-collection-fuerteventura/sale
   domestic: false
